--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(little-game-in-c VERSION 0.1.0)
 
+
+find_package(glfw3 REQUIRED)
 add_executable(little-game-in-c main.c)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
